# spacy-custom-tokenizer-issue

./: .gitignore  README.md  config.cfg  convert.py  functions.py  project.yml  pyproject.toml
