[tool.poetry]
name = "spacy-issue"
version = "0.1.0"
description = ""
authors = ["Nicolai Bjerre Pedersen <mr.bjerre@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
spacy = "^3.3.0"
spacy-html-tokenizer = "^0.1.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
